Vat service, business and controller. api.yaml updated
