# CurrencyConverter/src/main/java/com/conichi/currency/converter/controller/VATController.java
@@ -1,0 +1,41 @@
+package com.conichi.currency.converter.controller;
+
+import static com.conichi.currency.converter.constant.URLS.API_VAT_VALIDATION;
+import static com.conichi.currency.converter.constant.URLS.API_VAT_VALIDATION_DETAILS;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+import com.conichi.currency.converter.business.VATBusiness;
+import com.example.model.ResponseShortVatDetailDto;
+import com.example.model.ResponseVatDetailDto;
+
+@RestController
+@RequestMapping(API_VAT_VALIDATION)
+public class VATController {
+
+	private static final Logger logger = LoggerFactory.getLogger(VATController.class);
+
+	@Autowired
+	private VATBusiness VATBusiness;
+
+	@GetMapping(API_VAT_VALIDATION_DETAILS)
+	public ResponseEntity<ResponseVatDetailDto> validateVatDetailed(@RequestParam("vat") String vatId) {
+		logger.info("Request recieved with parameter vatId [" + vatId + "]");
+		ResponseVatDetailDto responseVatDetailDto = VATBusiness.validateVatDetails(vatId);
+		logger.info("Response recieved responseVatDetailDto [" + responseVatDetailDto + "]");
+		return ResponseEntity.ok().body(responseVatDetailDto);
+	}
+
+	@GetMapping
+	public ResponseEntity<ResponseShortVatDetailDto> validateVat(@RequestParam("vat") String vatId) {
+
+		return null;
+	}
+
+}
