# CurrencyConverter/src/main/java/com/conichi/currency/converter/feignclient/CurrencyLayerAPI.java
@@ -1,10 +1,12 @@
 package com.conichi.currency.converter.feignclient;
 
-import static com.conichi.currency.converter.constant.URLS.ACCESS_KEY;
-import static com.conichi.currency.converter.constant.URLS.ACCESS_KEY_VALUE;
+import static com.conichi.currency.converter.constant.URLS.CC_ACCESS_KEY;
+import static com.conichi.currency.converter.constant.URLS.CC_ACCESS_KEY_VALUE;
 import static com.conichi.currency.converter.constant.URLS.CURRENCYCONV_API_CONVERT;
 import static com.conichi.currency.converter.constant.URLS.QUERY_KEY;
+import static com.conichi.currency.converter.constant.URLS.QUESTION_MARK;
 import static com.conichi.currency.converter.constant.URLS.ULTRA_COMPACT;
+
 import com.example.model.ResponseConvertDto;
 
 import feign.Param;
@@ -17,8 +19,8 @@ import feign.RequestLine;
  */
 public interface CurrencyLayerAPI {
 
-	@RequestLine("GET " + CURRENCYCONV_API_CONVERT + QUERY_KEY + "={from}_{to}"+ "&" + ACCESS_KEY + "="
-			+ ACCESS_KEY_VALUE + "&" + ULTRA_COMPACT)
+	@RequestLine("GET " + CURRENCYCONV_API_CONVERT + QUESTION_MARK + QUERY_KEY + "={from}_{to}" + "&" + CC_ACCESS_KEY
+			+ "=" + CC_ACCESS_KEY_VALUE + "&" + ULTRA_COMPACT)
 	ResponseConvertDto currencyConverter(@Param("from") String from, @Param("to") String to);
 
 }
